--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "mocha --exit"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "knex": "^0.15.2",
     "pg": "^7.4.3"
