--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "pg": "^7.4.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "mocha": "^5.2.0"
