--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "eslint": "^5.4.0",
     "express": "^4.16.3",
     "knex": "^0.15.2",
     "pg": "^7.4.3"
