--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "babel-node": "babel-node",
     "start": "nodemon --exec yarn run babel-node -- ./app.js",
-    "test": "mocha --require babel-polyfill --require babel-register --exit"
+    "debug": "nodemon --exec yarn run babel-node --inspect -- ./app.js",
+    "test": "mocha --require babel-polyfill --require babel-register --no-timeouts --exit"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "eslint": "^5.4.0",
     "express": "^4.16.3",
     "knex": "^0.15.2",
+    "node-fetch": "^2.2.0",
     "pg": "^7.4.3"
   },
   "devDependencies": {
