--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-node": "babel-node",
     "start": "nodemon --exec yarn run babel-node -- ./app.js",
     "debug": "nodemon --exec yarn run babel-node --inspect -- ./app.js",
+    "debug:test": "export NODE_ENV=test && nodemon --exec yarn run babel-node --inspect -- ./app.js",
     "test": "mocha --require babel-polyfill --require babel-register --no-timeouts --exit"
   },
   "dependencies": {
