Implements meals index action for getting all meals and associated foods

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon --exec yarn run babel-node -- ./app.js",
     "debug": "nodemon --exec yarn run babel-node --inspect -- ./app.js",
     "debug:test": "export NODE_ENV=test && nodemon --exec yarn run babel-node --inspect -- ./app.js",
-    "test": "mocha --require babel-polyfill --require babel-register --no-timeouts --exit"
+    "test": "sleep 1 && mocha --require babel-polyfill --require babel-register --exit",
+    "test:notime": "sleep 1 && mocha --require babel-polyfill --require babel-register --no-timeouts --exit"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
