Adds in building from babel for production

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "babel-node": "babel-node",
-    "start": "nodemon --exec yarn run babel-node -- ./app.js",
-    "debug": "nodemon --exec yarn run babel-node --inspect -- ./app.js",
-    "debug:test": "export NODE_ENV=test && nodemon --exec yarn run babel-node --inspect -- ./app.js",
+    "start": "nodemon --exec yarn run babel-node -- ./src/app.js",
+    "debug": "nodemon --exec yarn run babel-node --inspect -- ./src/app.js",
+    "debug:test": "export NODE_ENV=test && nodemon --exec yarn run babel-node --inspect -- ./src/app.js",
     "test": "sleep 1 && mocha --require babel-polyfill --require babel-register --exit",
     "test:notime": "sleep 1 && mocha --require babel-polyfill --require babel-register --no-timeouts --exit"
   },
