Updates tests to have seed occur before eahc test

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start:debug": "nodemon --exec yarn run babel-node --inspect -- ./src/app.js",
     "debug": "nodemon --exec yarn run babel-node --inspect -- ./src/app.js",
     "debug:test": "export NODE_ENV=test && nodemon --exec yarn run babel-node --inspect -- ./src/app.js",
-    "test": "sleep 1 && knex seed:run --env test && mocha --require babel-polyfill --require babel-register --exit",
-    "test:notime": "sleep 1 && knex seed:run --env test && mocha --require babel-polyfill --require babel-register --no-timeouts --exit"
+    "test": "sleep 1 && mocha --require babel-polyfill --require babel-register --exit",
+    "test:notime": "sleep 1 && mocha --require babel-polyfill --require babel-register --no-timeouts --exit"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
