--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "eslint": "^5.4.0",
     "express": "^4.16.3",
     "knex": "^0.15.2",
