--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nock": "^9.6.1"
   }
 }
